[project]
name = "learning-program"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.3.2",
    "matplotlib>=3.10.5",
    "openai>=1.100.2",
    "orjson>=3.11.3",
    "pandas>=2.3.1",
    "pinecone>=7.3.0",
    "plotly>=6.2.0",
    "python-dotenv>=1.1.1",
    "streamlit>=1.47.1",
    "tenacity>=9.1.2",
    "tiktoken>=0.11.0",
    "typer>=0.16.1",
]
